# typst-kyphu

./: .gitattributes  README.md  example.typ
package/: abc.typ  denoted_as.js  jianpu.typ  lib.typ  typst.toml
plugin-jianpu/: .gitignore  Cargo.toml  README.md  build.sh
plugin-jianpu/src/: lib.rs
tree-sitter-jianpu/: Cargo.toml  grammar.js  package-lock.json  package.json  tree-sitter.json
tree-sitter-jianpu/bindings/rust/: build.rs  lib.rs
tree-sitter-jianpu/src/: grammar.json  node-types.json  parser.c
