[package]
name = "typst-jianpu"
version = "0.1.0"
edition = "2024"
[lib]
crate-type = ["cdylib"]
[dependencies]
wasm-minimal-protocol = { path = "./wasm-minimal-protocol/crates/macro" }
tree-sitter-jianpu = { path = "../tree-sitter-jianpu" }
tree-sitter = "0.24"
serde = "1.0.218"
ciborium = "0.2.2"
serde_bytes = "0.11.16"
[profile.release]
lto = true        # Enable link-time optimization
strip = true      # Strip symbols from binary*
opt-level = 'z'   # Optimize for size
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
